--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -1,6 +1,7 @@
 /**
  * Copyright 2015 Yahoo Inc. Licensed under the Apache License, Version 2.0
  * See accompanying LICENSE file.
+ *
  */
 
 .un-float-me {
