Web-design improvement:
update header
updtate layers
Update defaultMenu.scala.html
Add files via upload
Update defaultMenu.scala.html
Update clusterMenu.scala.html
last update

--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -3,6 +3,80 @@
  * See accompanying LICENSE file.
  */
 
+
+/**
+ * 15.05.2018 
+ * 
+ */
+
+
+.h1, .h2, .h3, h1, h2, h3 {
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+
+.h4, .h5, .h6, h4, h5, h6 {
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+
+.navbar {
+	margin-bottom: 0px;
+	border-bottom: solid 1px #ccc;
+}
+
+
+.navbar-header {
+	.label {
+		margin-top: 15px;
+    		display: inline-block;
+    		font-size: 100%;	
+	}	
+
+
+	a.navbar-brand {
+		& img {
+			height: 30px;
+			float: left;
+			margin-top: -6px;
+		}
+		& span {
+			margin-left: 6px;
+		}
+	}
+}
+
+.breadcrumb {
+	margin-bottom: 4px;
+	margin-left: 6px;
+	background: none;
+}
+
+.panel-heading {
+	padding-top: 4px; padding-bottom:4px;
+}
+
+.btn {
+	padding-top: 1px;padding-bottom:0;
+}
+
+.fix-col-cluster-list {
+	form {display: inline;}
+	.form-group {margin-bottom: 0; display:inline;}
+}
+
+.add-bar {
+ 	& > .row:first-child {
+		margin-top: 10px;
+	}
+}
+
+
+/**
+ * old styles
+ */
+
 .un-float-me {
   float : none;
 }
