--- a/app/views/broker/brokerView.scala.html
+++ b/app/views/broker/brokerView.scala.html
@@ -28,7 +28,7 @@
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withNamedViewAndCluster("Broker View",cluster,brokerId.toString)),
     scripts=brokerScripts) {
-<div class="col-md-12 un-pad-me">
+<div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></button>Broker Id @brokerId</h3>
