--- a/app/views/cluster/clusterList.scala.html
+++ b/app/views/cluster/clusterList.scala.html
@@ -8,7 +8,7 @@
 
             <table class="table">
                 <thead>
-                <tr><th>Active</th><th>Operations</th><th>Version</th></tr>
+                <tr><th>Active</th><th>Version</th><th class="text-center">Operations</th></tr>
                 </thead>
                 <tbody>
                 @for(cluster <- clusters) {
@@ -20,18 +20,23 @@
                             @cluster.name
                         }
                     </td>
-                    <td>
-                        <div class="btn-group-horizontal" role="group" aria-label="...">
+                    
+		    <td>
+                        @cluster.version.toString
+                    </td>
+
+		    <td class="text-center">
+                        <div class="btn-group-horizontal fix-col-cluster-list" role="group" aria-label="...">
                         @features.app(features.KMClusterManagerFeature) {
                             @if(cluster.enabled) {
-                                <a href="@routes.Cluster.updateCluster(cluster.name)" class="btn btn-default ops-button" role="button">Modify</a>
+                                <a href="@routes.Cluster.updateCluster(cluster.name)" class="btn btn-default" role="button">Modify</a>
                                 @b3.form(routes.Cluster.handleUpdateCluster(cluster.name)) {
                                 <input type="hidden" name="name" value="@cluster.name">
                                 <input type="hidden" name="kafkaVersion" value="@cluster.version.toString">
                                 <input type="hidden" name="zkHosts" value="@cluster.curatorConfig.zkConnect">
                                 <input type="hidden" name="securityProtocol" value="@cluster.securityProtocol.stringId">
                                 <input type="hidden" name="operation" value="Disable">
-                                @b3.submit('class -> "btn btn-warning ops-button"){ Disable }
+                                @b3.submit('class -> "btn btn-warning"){ Disable }
                                 }
                             } else {
                                 @b3.form(routes.Cluster.handleUpdateCluster(cluster.name)) {
@@ -40,7 +45,7 @@
                                 <input type="hidden" name="zkHosts" value="@cluster.curatorConfig.zkConnect">
                                 <input type="hidden" name="securityProtocol" value="@cluster.securityProtocol.stringId">
                                 <input type="hidden" name="operation" value="Enable">
-                                @b3.submit('class -> "btn btn-success ops-button"){ Enable }
+                                @b3.submit('class -> "btn btn-success"){ Enable }
                                 }
                                 @b3.form(routes.Cluster.handleUpdateCluster(cluster.name)) {
                                 <input type="hidden" name="name" value="@cluster.name">
@@ -48,16 +53,13 @@
                                 <input type="hidden" name="zkHosts" value="@cluster.curatorConfig.zkConnect">
                                 <input type="hidden" name="securityProtocol" value="@cluster.securityProtocol.stringId">
                                 <input type="hidden" name="operation" value="Delete">
-                                @b3.submit('class -> "btn btn-danger ops-button"){ Delete }
+                                @b3.submit('class -> "btn btn-danger"){ Delete }
                                 }
                             }
                         }
                         </div>
                     </td>
-                    <td>
-                        @cluster.version.toString
-                    </td>
-                </tr>
+                 </tr>
                 }
                 </tbody>
             </table>
