--- a/app/views/consumer/consumerView.scala.html
+++ b/app/views/consumer/consumerView.scala.html
@@ -17,7 +17,7 @@
     "Consumer View",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withNamedViewAndCluster("Consumer View",cluster,consumer))) {
-<div class="col-md-12 un-pad-me">
+<div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></button>@consumer</h3>
