--- a/app/views/logkafka/logkafkaList.scala.html
+++ b/app/views/logkafka/logkafkaList.scala.html
@@ -28,7 +28,7 @@
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withViewAndCluster("Logkafkas",cluster)),
     scripts=logkafkaScripts) {
-    <div class="col-md-12">
+    <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading"><h3>Logkafkas</h3></div>
             @errorOrLogkafkas.fold( 
