--- a/app/views/logkafka/logkafkaViewContent.scala.html
+++ b/app/views/logkafka/logkafkaViewContent.scala.html
@@ -7,7 +7,7 @@
 )(implicit messages: play.api.i18n.Messages)
 
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-lg-8">
         <div class="panel panel-default">
             <div class="panel-heading"><h4>Logkafka Summary</h4></div>
             <table class="table">
@@ -44,7 +44,7 @@
             }
         </div>
     </div>
-    <div class="col-md-4">
+    <div class="col-lg-4">
         <div class="panel panel-default">
             <div class="panel-heading"><h4>Operations</h4></div>
             <table class="table">
