--- a/app/views/topic/topicList.scala.html
+++ b/app/views/topic/topicList.scala.html
@@ -66,7 +66,7 @@
         }
     </div>
     <div class="col-md-12">
-        <div class="panel panel-default">
+        <div class="panel panel-default add-bar">
             <div class="panel-heading"><h3>Topics</h3></div>
             @errorOrTopics.fold( 
                 views.html.errors.onApiError(_),
