--- a/app/views/topic/topicView.scala.html
+++ b/app/views/topic/topicView.scala.html
@@ -21,8 +21,8 @@
     "Topic View",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withNamedViewAndCluster("Topic View",cluster,topic))) {
-<div class="col-md-12 un-pad-me">
-    <div class="panel panel-default">
+<div class="col-md-12">
+    <div class="panel panel-default add-bar">
         <div class="panel-heading">
             <h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></button>@topic</h3>
         </div>
