--- a/app/views/broker/brokerViewContent.scala.html
+++ b/app/views/broker/brokerViewContent.scala.html
@@ -15,7 +15,7 @@
 }
 
         <div class="row">
-            <div class="col-md-7">
+            <div class="col-lg-6">
                 <div class="panel panel-default">
                     <div class="panel-heading"><h4>Summary</h4></div>
                     <table class="table">
@@ -32,7 +32,7 @@
                     </table>
                 </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-lg-6">
                 <div class="panel panel-default">
                     <div class="panel-heading"><h4>Metrics</h4></div>
                     @renderBrokerMetrics
@@ -40,7 +40,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-lg-12">
                 <div class="panel panel-default">
                     <div class="panel-heading"><h4>Messages count</h4></div>
                     <div class="ct-chart"></div>
