--- a/app/views/common/resultsOfCommand.scala.html
+++ b/app/views/common/resultsOfCommand.scala.html
@@ -19,7 +19,7 @@
 
 @main(actionTitle, menu = theMenu, breadcrumbs = views.html.navigation.breadCrumbs(crumbs)) {
 
-    <div class="col-md-6 un-pad-me">
+    <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading"><h3>@actionTitle</h3></div>
             @errorOrSuccess.fold( errs => errs.map(views.html.errors.onApiError(_, Some(errorLink))) , b => link(successLink))
