--- a/app/views/consumer/consumedTopicView.scala.html
+++ b/app/views/consumer/consumedTopicView.scala.html
@@ -19,7 +19,7 @@
     "Consumed Topic View",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withNamedViewAndClusterAndConsumerWithType("Consumer View",cluster,consumer,consumerType,topic))) {
-<div class="col-md-12 un-pad-me">
+<div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></button>@consumer / @topic</h3>
