--- a/app/views/consumer/consumedTopicViewContent.scala.html
+++ b/app/views/consumer/consumedTopicViewContent.scala.html
@@ -23,7 +23,7 @@
 }
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading"><h4>Topic Summary</h4></div>
             <table class="table">
@@ -42,7 +42,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading"><h4><a href="@routes.Topic.topic(cluster,topic)">@topic</a></h4></div>
             <table class="table">
