--- a/app/views/consumer/consumerViewContent.scala.html
+++ b/app/views/consumer/consumerViewContent.scala.html
@@ -13,7 +13,7 @@
 }
 
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading"><h4>Consumed Topic Information</h4></div>
             <table class="table">
