--- a/app/views/logkafka/updateConfig.scala.html
+++ b/app/views/logkafka/updateConfig.scala.html
@@ -44,7 +44,7 @@ errorOrForm: kafka.manager.ApiError \/ (Form[models.form.UpdateLogkafkaConfig], 
     "Update Config",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withNamedViewAndClusterAndLogkafka("Logkafka View",cluster,logkafka_id,log_path,"Update Config"))) {
-    <div class="col-md-6 un-pad-me">
+    <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading"><h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></button>Update Config</h3></div>
             <div class="panel-body">
