--- a/app/views/navigation/clusterMenu.scala.html
+++ b/app/views/navigation/clusterMenu.scala.html
@@ -5,15 +5,17 @@
 @(cluster: String, menuTitle: String, menuItem: String, menuList: IndexedSeq[models.navigation.Menu])
 
 <div class="navbar navbar-default" role="navigation">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <!--  Display three horizontal lines when navbar collapsed. -->
                 <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
             </button>
-            <img src="@routes.Assets.versioned("images/favicon.png")">
-            <a class="navbar-brand un-float-me" href="@routes.Application.index()">
-                Kafka Manager</a><span class="label label-primary">@cluster</span>
+            <!--<img src="@routes.Assets.versioned("images/favicon.png")">-->
+            <a class="navbar-brand" href="@routes.Application.index()">
+		<!--<img src="@routes.Assets.versioned("images/favicon.png")">-->
+		<img src="@routes.Assets.versioned("images/logo.png")">    
+                <span>Kafka Manager</span></a><span class="label label-primary">@cluster</span>
         </div>
         @menuNav(menuTitle,menuItem,menuList)
     </div>
