--- a/app/views/preferredReplicaElection.scala.html
+++ b/app/views/preferredReplicaElection.scala.html
@@ -63,10 +63,10 @@ operationForm: Form[models.form.PreferredReplicaElectionOperation]
     "Preferred Replica Election",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withViewAndCluster("Preferred Replica Election",cluster))) {
-<div class="col-md-6 un-pad-me">
-    <div class="panel panel-default">
+<div class="col-lg-12">
+    <div class="panel panel-default add-bar">
         <div class="panel-heading"><h3>Preferred Replica Election</h3></div>
-        <div class="col-md-12">
+        <div class="col-lg-12">
             @features.app(features.KMPreferredReplicaElectionFeature) {
                 <div class="row">
                     @b3.form(routes.PreferredReplicaElection.handleRunElection(cluster)) {
