--- a/app/views/topic/addPartitions.scala.html
+++ b/app/views/topic/addPartitions.scala.html
@@ -53,7 +53,7 @@
     "Add Partitions",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withNamedViewAndClusterAndTopic("Topic View",cluster,topic,"Add Partitions"))) {
-    <div class="col-md-6 un-pad-me">
+    <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading"><h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></button>Add Partitions</h3></div>
             <div class="panel-body">
