--- a/app/views/topic/createTopic.scala.html
+++ b/app/views/topic/createTopic.scala.html
@@ -45,7 +45,7 @@
     "Create Topic",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withViewAndCluster("Create Topic",cluster))) {
-    <div class="col-md-6 un-pad-me">
+    <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading"><h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></button>Create Topic</h3></div>
             @errorOrForm.fold( views.html.errors.onApiError(_), t => renderForm(t._1))
