--- a/app/views/topic/runMultipleAssignments.scala.html
+++ b/app/views/topic/runMultipleAssignments.scala.html
@@ -57,7 +57,7 @@
   "Run Assignment",
   menu = theMenu,
   breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withViewAndCluster("Topics",cluster))) {
-<div class="col-md-6 un-pad-me">
+<div class="col-lg-12">
     <div class="panel panel-default">
         <div class="panel-heading"><h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span></button>Run Assignments</h3></div>
         <div class="panel-body">
