--- a/app/views/common/resultOfCommand.scala.html
+++ b/app/views/common/resultOfCommand.scala.html
@@ -19,7 +19,7 @@
 
 @main(actionTitle, menu = theMenu, breadcrumbs = views.html.navigation.breadCrumbs(crumbs)) {
 
-    <div class="col-md-6 un-pad-me">
+    <div class="col-12 un-pad-me">
         <div class="card">
             <div class="card-header"><h3>@actionTitle</h3></div>
             <div class="card-body">
