--- a/app/views/consumer/consumedTopicViewContent.scala.html
+++ b/app/views/consumer/consumedTopicViewContent.scala.html
@@ -23,7 +23,7 @@
 }
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-12">
         <div class="card">
             <div class="card-header"><h4>Topic Summary</h4></div>
             <div class="card-body">
