--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -10,7 +10,7 @@
     "Kafka Manager",
     views.html.navigation.defaultMenu(views.html.navigation.menuNav("Cluster","List",menus.indexMenu)),
     views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withView("Clusters"))) {
-<div class="col-md-6 un-pad-me">
+<div class="col-12 un-pad-me">
     <div class="card">
         <div class="card-header"><h3>Clusters</h3></div>
         <div class="card-body">
