--- a/app/views/logkafka/updateConfig.scala.html
+++ b/app/views/logkafka/updateConfig.scala.html
@@ -43,7 +43,7 @@ errorOrForm: kafka.manager.ApiError \/ (Form[models.form.UpdateLogkafkaConfig], 
     "Update Config",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withNamedViewAndClusterAndLogkafka("Logkafka View",cluster,logkafka_id,log_path,"Update Config"))) {
-    <div class="col-md-6 un-pad-me">
+    <div class="col-12 un-pad-me">
         <div class="card">
             <div class="card-header"><h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="octicon octicon-arrow-left" aria-hidden="true"></span></button>Update Config</h3></div>
             <div class="card-body">
