--- a/app/views/preferredReplicaElection.scala.html
+++ b/app/views/preferredReplicaElection.scala.html
@@ -66,7 +66,7 @@ operationForm: Form[models.form.PreferredReplicaElectionOperation]
     "Preferred Replica Election",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withViewAndCluster("Preferred Replica Election",cluster))) {
-<div class="col-md-6 un-pad-me">
+<div class="col-12 un-pad-me">
     <div class="card">
         <div class="card-header"><h3>Preferred Replica Election</h3></div>
         <div class="col-md-12">
