--- a/app/views/reassignPartitions.scala.html
+++ b/app/views/reassignPartitions.scala.html
@@ -66,7 +66,7 @@
     "Reassign Partitions",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withViewAndCluster("Reassign Partitions",cluster))) {
-<div class="col-md-6 un-pad-me">
+<div class="col-12 un-pad-me">
     <div class="card">
         <div class="card-header"><h3>Reassign Partitions</h3></div>
         <div class="col-md-12">
