--- a/app/views/topic/addPartitions.scala.html
+++ b/app/views/topic/addPartitions.scala.html
@@ -52,7 +52,7 @@
     "Add Partitions",
     menu = theMenu,
     breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withNamedViewAndClusterAndTopic("Topic View",cluster,topic,"Add Partitions"))) {
-    <div class="col-md-6 un-pad-me">
+    <div class="col-12 un-pad-me">
         <div class="card">
             <div class="card-header"><h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="octicon octicon-arrow-left" aria-hidden="true"></span></button>Add Partitions</h3></div>
             <div class="card-body">
