--- a/app/views/topic/addPartitionsToMultipleTopics.scala.html
+++ b/app/views/topic/addPartitionsToMultipleTopics.scala.html
@@ -78,7 +78,7 @@
 "Add Partitions to Multiple Topics",
 menu = theMenu,
 breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withViewAndCluster("Topics",cluster))) {
-<div class="col-md-6 un-pad-me">
+<div class="col-12 un-pad-me">
     <div class="card">
         <div class="card-header"><h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="octicon octicon-arrow-left" aria-hidden="true"></span></button>Add Partitions</h3></div>
         <div class="card-body">
