--- a/app/views/topic/confirmAssignment.scala.html
+++ b/app/views/topic/confirmAssignment.scala.html
@@ -70,7 +70,7 @@
   "Confirm Assignment",
   menu = theMenu,
   breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withNamedViewAndCluster("Topic View",cluster,topic))) {
-<div class="col-md-6 un-pad-me">
+<div class="col-12 un-pad-me">
     <div class="card">
         <div class="card-header"><h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="octicon octicon-arrow-left" aria-hidden="true"></span></button>Confirm Assignment</h3></div>
         <div class="card-body">
@@ -78,7 +78,7 @@
         </div>
     </div>
 </div>
-<div class="col-md-6 un-pad-me">
+<div class="col-12 un-pad-me">
     <div class="card">
         <div class="card--body">
             @errorOrCurrentAssignments.fold( views.html.errors.onApiError(_), t => renderAssignments(t))
