--- a/app/views/topic/runMultipleAssignments.scala.html
+++ b/app/views/topic/runMultipleAssignments.scala.html
@@ -56,7 +56,7 @@
   "Run Assignment",
   menu = theMenu,
   breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withViewAndCluster("Topics",cluster))) {
-<div class="col-md-6 un-pad-me">
+<div class="col-12 un-pad-me">
     <div class="card">
         <div class="card-header"><h3><button type="button" class="btn btn-link" onclick="goBack()"><span class="octicon octicon-arrow-left" aria-hidden="true"></span></button>Run Assignments</h3></div>
         <div class="card-body">
