--- a/app/views/topic/topicList.scala.html
+++ b/app/views/topic/topicList.scala.html
@@ -47,7 +47,7 @@
         <div class="card">
             <div class="card-header"><h4>Operations</h4></div>
             <div class="card-body">
-            <div class="col-md-6">
+            <div class="col-12">
             <table class="table">
                 <tr>
                     @features.app(features.KMReassignPartitionsFeature) {
