css styles for bootstrap components

--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -3,6 +3,42 @@
  * See accompanying LICENSE file.
  */
 
+.navbar-nav {
+  width: 100%;
+  justify-content: flex-end;
+}
+
+form {
+  display: inline-block;
+}
+
+.btn {
+  padding: .1rem .75rem;
+}
+
+ .table td, .table th {
+   padding: .3rem;
+ }
+
+.breadcrumb {
+  padding: .3rem 1rem;
+}
+
+.card {
+  margin-bottom: .5rem;
+}
+
+.card-header {
+  padding: .3rem 1.25rem;
+}
+
+.card-body {
+  padding: .5rem 1.25rem;
+}
+
+/**
+*/
+
 .un-float-me {
   float : none;
 }
