--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -3,6 +3,10 @@
  * See accompanying LICENSE file.
  */
 
+.navbar {
+  width: 100%;
+}
+
 .navbar-nav {
   width: 100%;
   justify-content: flex-end;
@@ -16,9 +20,10 @@ form {
   padding: .1rem .75rem;
 }
 
- .table td, .table th {
-   padding: .3rem;
- }
+.table td,
+.table th {
+  padding: .3rem;
+}
 
 .breadcrumb {
   padding: .3rem 1rem;
@@ -30,6 +35,10 @@ form {
 
 .card-header {
   padding: .3rem 1.25rem;
+
+  &>h3 {
+    margin-bottom: 0;
+  }
 }
 
 .card-body {
@@ -40,24 +49,24 @@ form {
 */
 
 .un-float-me {
-  float : none;
+  float: none;
 }
 
 .un-pad-me-left {
-  padding-left: 0px ;
+  padding-left: 0px;
 }
 
 .un-pad-me-right {
-  padding-right: 0px ;
+  padding-right: 0px;
 }
 
 .un-pad-me {
-  padding-left: 0px ;
-  padding-right: 0px ;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .ops-button {
-  float: left ;
+  float: left;
   width: 75px;
   margin-left: 5px;
   margin-right: 5px;
