ADS-344 markup in general

--- a/app/assets/stylesheets/index.less
+++ b/app/assets/stylesheets/index.less
@@ -3,6 +3,17 @@
  * See accompanying LICENSE file.
  */
 
+header.navbar {
+  padding: 0;
+  background-color: #f8f8f8;
+  border-bottom: 1px solid #e7e7e7;
+
+  & nav.navbar {
+    padding: 0 1rem;
+    & img {height: 30px;}
+  }
+}
+
 .navbar {
   width: 100%;
 }
@@ -27,6 +38,8 @@ form {
 
 .breadcrumb {
   padding: .3rem 1rem;
+  margin-bottom: .5rem;
+  background-color: transparent;
 }
 
 .card {
@@ -140,4 +153,8 @@ form {
 #selectMetrics {
   width: 100%;
   margin-bottom: 3%;
+}
+
+#topics-table {
+  th {font-weight: normal; font-size: .7rem;}
 }
