--- a/app/views/broker/brokerList.scala.html
+++ b/app/views/broker/brokerList.scala.html
@@ -5,29 +5,31 @@
 @import kafka.manager.model.ActorModel.BrokerIdentity
 @import scalaz.{\/}
 @(cluster:String, errorOrBrokers: kafka.manager.ApiError \/ kafka.manager.BrokerListExtended
-)(implicit af: features.ApplicationFeatures, messages: play.api.i18n.Messages, menus: models.navigation.Menus, request: RequestHeader)
+)(implicit af: features.ApplicationFeatures, messages: play.api.i18n.Messages, menus: models.navigation.Menus, request:
+RequestHeader)
 
 @theMenu = {
-    @views.html.navigation.clusterMenu(cluster,"Brokers","",menus.clusterMenus(cluster)(
-        errorOrBrokers.toOption.map(_.clusterContext.clusterFeatures).getOrElse(kafka.manager.features.ClusterFeatures.default)))
+@views.html.navigation.clusterMenu(cluster,"Brokers","",menus.clusterMenus(cluster)(
+errorOrBrokers.toOption.map(_.clusterContext.clusterFeatures).getOrElse(kafka.manager.features.ClusterFeatures.default)))
 
 }
-        
+
 @renderBrokerMetrics(bl: kafka.manager.BrokerListExtended) = {
-    @if(bl.clusterContext.clusterFeatures.features(kafka.manager.features.KMJMXMetricsFeature)) {
-        @views.html.common.brokerMetrics(bl.combinedMetric)
-    } else {
-        <div class="alert alert-info" role="alert">
-            Please enable JMX polling <a href="@routes.Cluster.updateCluster(cluster).relative" class="alert-link">here</a>.
-        </div>
-    }
+@if(bl.clusterContext.clusterFeatures.features(kafka.manager.features.KMJMXMetricsFeature)) {
+@views.html.common.brokerMetrics(bl.combinedMetric)
+} else {
+<div class="alert alert-info" role="alert">
+    Please enable JMX polling <a href="@routes.Cluster.updateCluster(cluster).relative" class="alert-link">here</a>.
+</div>
+}
 }
 
 @main(
-    "Broker List",
-    menu = theMenu,
-    breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withViewAndCluster("Brokers",cluster))) {
-    <div class="col-md-7 un-pad-me">
+"Broker List",
+menu = theMenu,
+breadcrumbs=views.html.navigation.breadCrumbs(models.navigation.BreadCrumbs.withViewAndCluster("Brokers",cluster))) {
+<div class="row">
+    <div class="col-md-6 un-pad-me">
         <div class="card">
             <div class="card-header">
                 <h3>
@@ -37,17 +39,20 @@
                 </h3>
             </div>
             <div class="card-body">
-            @errorOrBrokers.fold( views.html.errors.onApiError(_), views.html.broker.brokerListContent(cluster,_) )
+                @errorOrBrokers.fold( views.html.errors.onApiError(_), views.html.broker.brokerListContent(cluster,_) )
             </div>
         </div>
     </div>
-    <div class="col-md-5 un-pad-me">
+    <div class="col-md-6 un-pad-me">
         <div class="card">
-            <div class="card-header"><h3>Combined Metrics</h3></div>
+            <div class="card-header">
+                <h3>Combined Metrics</h3>
+            </div>
             <div class="card-body">
-            @errorOrBrokers.fold( views.html.errors.onApiError(_), bl => renderBrokerMetrics(bl))
+                @errorOrBrokers.fold( views.html.errors.onApiError(_), bl => renderBrokerMetrics(bl))
             </div>
         </div>
     </div>
+</div>
 
 }
